--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@ body {
     font-weight: 400;
     font-size: 1.2rem;
     line-height: 1.4;
-    color: darkblue;
-    background-color: whitesmoke;
+    color: white;
+    background-color: black;
 }
 
 img {
