--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
 }
-
 body {
     font-family: Arial, sans-serif;
     font-weight: 400;
@@ -12,37 +11,32 @@ body {
     margin: 20px;
     text-align: justify;
 }
-
 main {
     color: #ebe1e1;
 }
-
 img {
     max-width: 100%;
     height: auto;
     width: auto;
 }
-
-
 a {
     color: deeppink;
     text-decoration: #FFB6C1;
 }
-
 h1 {
     front-size: 200px;
 }
-
+h2{
+    front-size: 23em;
+}
 a:hover {
     color: #FF69B4;
 }
-
 .avatar {
   max-width: 14%;
     height: auto;
     width: auto;
 }
-
 .coiffure {
     max-width: 35%;
     height: auto;
