test de justify

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
     color: white;
     background-color: #333333;
     margin: 20px;
-    text-align: justify;
+    /*text-align: justify;*/
 }
 main {
     color: #ebe1e1;
