--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,13 @@ body {
     color: white;
     background-color: #333333;
     margin: 20px;
-    /*text-align: justify;*/
+    text-align: justify;
 }
 main {
     color: #ebe1e1;
-    max-width: 8px;
+    /*max-width: 8px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20px;*/
 }
 img {
     max-width: 100%;
