--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
 main {
     color: #ebe1e1;
     max-width: 800px;
-    margin: 0px;
+    margin: 20px auto;
     padding: 20px;
 }
 img {
@@ -24,7 +24,8 @@ img {
 }
 a {
     color: deeppink;
-    text-decoration: #FFB6C1;
+    text-decoration: none;
+    
 }
 h1 {
     font-size: 45px;
