--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,10 @@ h1 {
     font-size: 45px;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
+h2{
+    font-size: 1.5em;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
 p {
     font-size: 1.2em;
 }
