--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ h1 {
 h2{
     font-size: 1.5em;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    color: #ffffff;
 }
 p {
     font-size: 1.2em;
