--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ a:hover {
   max-width: 14%;
     height: auto;
     width: auto;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 .coiffure {
     max-width: 32%;
